# agent-ops-room

./: .gitignore  ARCHITECTURE.md  AUTH.md  CONFIG.md  Cargo.toml  DEVELOPMENT.md  README.md  SPEC.md  docker-compose.yml  messages.jsonl  monitor-room.sh  send-message.sh
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  llm.rs  memory.rs  message.rs  topics.rs
crates/facilitator/: Cargo.toml
crates/facilitator/src/: agent_registry.rs  config.rs  llm.rs  main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  main.rs  mic_grant.rs  validator.rs
crates/replay/: Cargo.toml  README.md
crates/replay/src/: config.rs  main.rs  tui.rs
crates/sink/: Cargo.toml  README.md
crates/sink/src/: config.rs  main.rs
crates/specialist-agent/: Cargo.toml
crates/specialist-agent/src/: config.rs  llm.rs  main.rs
crates/summarizer/: Cargo.toml  README.md
crates/summarizer/src/: config.rs  llm.rs  main.rs
crates/ui-bridge/: Cargo.toml
crates/ui-bridge/src/: config.rs  main.rs
crates/user-cli/: Cargo.toml
crates/user-cli/src/: main.rs
mosquitto/config/: mosquitto.conf
