[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialization for Message types
serde.workspace = true
serde_json.workspace = true

# HTTP client for LLM API (optional feature)
reqwest = { version = "0.11", features = ["json"], optional = true }

# Logging
tracing = { version = "0.1", optional = true }

[features]
default = []
llm = ["reqwest", "tracing"]
