[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime for main and signal handling
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI argument parsing
clap.workspace = true

# MQTT client
rumqttc.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Common types
common.workspace = true
