[package]
name = "replay"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rumqttc = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
