[package]
name = "specialist-agent"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime for main and signal handling
tokio = { workspace = true, features = ["process"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI argument parsing
clap.workspace = true

# MQTT client
rumqttc.workspace = true

# JSON serialization
serde.workspace = true
serde_json.workspace = true

# Random number generation
rand = "0.8"

# Common types
common = { workspace = true, features = ["llm"] }
