[package]
name = "ui-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime for main and signal handling
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI argument parsing
clap.workspace = true

# Web framework for HTTP/SSE
axum.workspace = true

# Common types
common.workspace = true
