[package]
name = "user-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
rumqttc.workspace = true

# For interactive CLI
rustyline = "14.0"
chrono = "0.4"
anyhow = "1.0"
